<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:padding="5dp"
        tools:context=".SignupActivity">

        <ImageView
            android:layout_width="400dp"
            android:layout_height="230dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text"
            android:hint="@string/username"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/edit_text"
            android:defaultFocusHighlightEnabled="true"
            android:hint="@string/password"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="23sp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/con_Password"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/edit_text"
            android:defaultFocusHighlightEnabled="true"
            android:hint="@string/confirm_password"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="23sp"
            tools:targetApi="o" />


        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_back"
            android:onClick="signUp"
            android:text="@string/sign_up_"
            android:textColor="@color/white"
            android:textSize="23sp" />

    </LinearLayout>
</ScrollView>