<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="310dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/txtClose"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_gravity="end"
        android:gravity="center"
        android:text="@string/x"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="70dp"
                android:text="@string/total"
                android:textColor="@color/white"
                android:textSize="29sp"
                android:textStyle="bold"
                android:layout_marginStart="65dp" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="@string/_100"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white"
                android:textSize="29sp"
                android:layout_marginStart="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="70dp"
                android:text="@string/presen"
                android:textColor="@color/white"
                android:textSize="29sp"
                android:textStyle="bold"
                android:layout_marginStart="65dp" />

            <TextView
                android:id="@+id/present"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="@string/_100"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white"
                android:textSize="29sp"
                android:layout_marginStart="5dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="70dp"
                android:text="@string/absen"
                android:textColor="@color/white"
                android:textSize="29sp"
                android:textStyle="bold"
                android:layout_marginStart="65dp" />

            <TextView
                android:id="@+id/absent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="@string/_100"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white"
                android:textSize="29sp"
                android:layout_marginStart="5dp" />
        </LinearLayout>


        <Button
            android:id="@+id/butRound2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="39dp"
            android:background="@drawable/button_back"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>

</LinearLayout>